--- a/wiki/cs/PartDesign_Body.html
+++ b/wiki/cs/PartDesign_Body.html
@@ -8,7 +8,7 @@
 <li><a href="../pl/PartDesign_Body.html" class="mw-pt-progress mw-pt-progress--complete" title="Projekt Cz&#281;&#347;ci: Utw&oacute;rz zawarto&#347;&#263; (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/PartDesign_Body.html" class="mw-pt-progress mw-pt-progress--low" title="PartDesign Corpo (5% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/PartDesign_Body.html" class="mw-pt-progress mw-pt-progress--low" title="PartDesign: Body (5% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../ru/PartDesign_Body.html" class="mw-pt-progress mw-pt-progress--med" title="&#1058;&#1077;&#1083;&#1086; PartDesign (33% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ja/PartDesign_Body.html" class="mw-pt-progress mw-pt-progress--low" title="PartDesign&#12539;&#12508;&#12487;&#12451;&#12540;&#12434;&#20316;&#25104; (5% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
 <li><a href="../ko/PartDesign_Body.html" class="mw-pt-progress mw-pt-progress--high" title="&#47800;&#53685;(PartDesign Body) (71% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
@@ -78,12 +78,12 @@
 <li>Vytvo&#345;&iacute; se pr&aacute;zdn&eacute; t&#283;leso, kter&eacute; se automaticky stane <a href="../PartDesign_Body.html#Active_status" title="PartDesign Body">aktivn&iacute;</a>.</li>
 <li>Nyn&iacute; m&#367;&#382;ete stisknout tla&#269;&iacute;tko <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=PartDesign_NewSketch.svg&amp;filetimestamp=20240726125744&amp;.html" class="mw-file-description"><img src="../File/PartDesign_NewSketch.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_NewSketch.html" title="PartDesign NewSketch">Vytvo&#345;it n&aacute;&#269;rt</a></span> pro vytvo&#345;en&iacute; <a href="../Sketch.html" title="Sketch">n&aacute;&#269;rtu</a> v t&#283;lese, kter&yacute; lze pou&#382;&iacute;t s n&aacute;strojem <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=PartDesign_Pad.svg&amp;filetimestamp=20240522201513&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Pad.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Pad.html" title="PartDesign Pad">Deska</a></span>.</li>
 <li>Alternativn&#283; m&#367;&#382;ete p&#345;idat z&aacute;kladn&iacute; <a href="../PartDesign_Feature.html" title="PartDesign Feature">PartDesign prvek</a>, nap&#345;&iacute;klad <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=PartDesign_AdditiveBox.svg&amp;filetimestamp=20191206231922&amp;.html" class="mw-file-description"><img src="../File/PartDesign_AdditiveBox.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_AdditiveBox.html" title="PartDesign AdditiveBox">P&iacute;davn&yacute; kv&aacute;dr</a></span>.</li></ol>
-<p>If a solid object is selected:
+<p>Pokud je vybr&aacute;n pevn&yacute; objekt:
 </p>
-<ol><li>There are several ways to invoke the tool:
-<ul><li>Press the <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=PartDesign_Body.svg&amp;filetimestamp=20191125185840&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Body.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Body.html" title="PartDesign Body">New Body</a></span> button.</li>
-<li>Select the <b>Part Design &rarr; <span typeof="mw:File"><a href="../index.php?title=PartDesign_Body.svg&amp;filetimestamp=20191125185840&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Body.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> New Body</b> option from the menu.</li></ul></li>
-<li>A new Body is created containing a single <b>Base Feature</b>. This Base Feature element is a simple reference to another object previously created or imported into the document. See <a href="../PartDesign_Body.html#Base_Feature" title="PartDesign Body">Base Feature</a> for more information. An existing Body or <a href="../PartDesign_Feature.html" title="PartDesign Feature">PartDesign Feature</a> cannot be selected when pressing <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=PartDesign_Body.svg&amp;filetimestamp=20191125185840&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Body.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Body.html" title="PartDesign Body">Body</a></span>.</li></ol>
+<ol><li>Existuje n&#283;kolik zp&#367;sob&#367;, jak tento n&aacute;stroj spustit:
+<ul><li>Stiskn&#283;te tla&#269;&iacute;tko <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=PartDesign_Body.svg&amp;filetimestamp=20191125185840&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Body.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Body.html" title="PartDesign Body">Nov&eacute; t&#283;leso</a></span>.</li>
+<li>Vyberte v menu volbu <b>Part Design &rarr; <span typeof="mw:File"><a href="../index.php?title=PartDesign_Body.svg&amp;filetimestamp=20191125185840&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Body.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Nov&eacute; t&#283;leso</b>.</li></ul></li>
+<li>Je vytvo&#345;eno nov&eacute; t&#283;leso obsahuj&iacute;c&iacute; jedin&yacute; <b>z&aacute;kladn&iacute; prvek</b>. Tento z&aacute;kladn&iacute; prvek je jednoduch&yacute;m odkazem na jin&yacute; objekt, kter&yacute; byl d&#345;&iacute;ve vytvo&#345;en nebo importov&aacute;n do dokumentu. V&iacute;ce informac&iacute; najdete v sekci <a href="../PartDesign_Body.html#Base_Feature" title="PartDesign Body">Z&aacute;kladn&iacute; prvek</a>. Existuj&iacute;c&iacute; t&#283;leso nebo <a href="../PartDesign_Feature.html" title="PartDesign Feature">prvek PartDesign</a>  nelze vybrat stisknut&iacute;m tla&#269;&iacute;tka <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=PartDesign_Body.svg&amp;filetimestamp=20191125185840&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Body.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Body.html" title="PartDesign Body">T&#283;leso</a></span>.</li></ol>
 <h2><span class="mw-headline" id="Properties">Properties</span></h2>
 <p>A <a href="../PartDesign_Body.html" title="PartDesign Body">PartDesign Body</a> (<code>PartDesign::Body</code> class) is derived from a <a href="../Part_Feature.html" title="Part Feature">Part Feature</a> (<code>Part::Feature</code> class), therefore it shares all the latter's properties.
 </p><p>In addition to the properties described in <a href="../Part_Feature.html" title="Part Feature">Part Feature</a>, the PartDesign Body has the following properties in the <a href="../Property_View.html" title="Property View">Property View</a>.
@@ -249,15 +249,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125172006
+Cached time: 20260125172734
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.163 seconds
-Real time usage: 0.242 seconds
+CPU time usage: 0.166 seconds
+Real time usage: 0.330 seconds
 Preprocessor visited node count: 1499/1000000
-Post&#8208;expand include size: 37742/2097152 bytes
-Template argument size: 9889/2097152 bytes
+Post&#8208;expand include size: 37759/2097152 bytes
+Template argument size: 9906/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 4/100
 Unstrip recursion depth: 0/20
@@ -265,19 +265,19 @@ Unstrip post&#8208;expand size: 6403/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   47.661      1 -total
- 15.85%    7.555     14 Template:PropertyData
- 12.95%    6.173     20 Template:Variable
- 11.89%    5.669      1 Template:PartDesign_Tools_navi/cs
-  9.43%    4.493      1 Template:Userdocnavi/cs
-  8.29%    3.951      1 Template:GuiCommand
-  7.68%    3.660      2 Template:Navigation_menu_2
-  6.71%    3.196      2 Template:Docnav
-  5.84%    2.783      2 Template:Code
-  5.61%    2.673      6 Template:PropertyView
+100.00%   91.570      1 -total
+ 22.16%   20.293     14 Template:PropertyData
+ 16.46%   15.069     20 Template:Variable
+  8.90%    8.153      3 Template:TitleProperty
+  7.52%    6.884      1 Template:PartDesign_Tools_navi/cs
+  6.91%    6.326      7 Template:MenuCommand
+  6.68%    6.114      6 Template:PropertyView
+  6.34%    5.809      8 Template:Caption
+  5.57%    5.104      1 Template:Userdocnavi/cs
+  4.72%    4.324     13 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412621-0!canonical and timestamp 20260125172005 and revision id 1744071. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412621-0!canonical and timestamp 20260125172733 and revision id 1744073. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
