--- a/wiki/cs/PartDesign_Body.html
+++ b/wiki/cs/PartDesign_Body.html
@@ -84,7 +84,9 @@
 <ul><li>Stiskn&#283;te tla&#269;&iacute;tko <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=PartDesign_Body.svg&amp;filetimestamp=20191125185840&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Body.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Body.html" title="PartDesign Body">Nov&eacute; t&#283;leso</a></span>.</li>
 <li>Vyberte v menu volbu <b>Part Design &rarr; <span typeof="mw:File"><a href="../index.php?title=PartDesign_Body.svg&amp;filetimestamp=20191125185840&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Body.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Nov&eacute; t&#283;leso</b>.</li></ul></li>
 <li>Je vytvo&#345;eno nov&eacute; t&#283;leso obsahuj&iacute;c&iacute; jedin&yacute; <b>z&aacute;kladn&iacute; prvek</b>. Tento z&aacute;kladn&iacute; prvek je jednoduch&yacute;m odkazem na jin&yacute; objekt, kter&yacute; byl d&#345;&iacute;ve vytvo&#345;en nebo importov&aacute;n do dokumentu. V&iacute;ce informac&iacute; najdete v sekci <a href="../PartDesign_Body.html#Base_Feature" title="PartDesign Body">Z&aacute;kladn&iacute; prvek</a>. Existuj&iacute;c&iacute; t&#283;leso nebo <a href="../PartDesign_Feature.html" title="PartDesign Feature">prvek PartDesign</a>  nelze vybrat stisknut&iacute;m tla&#269;&iacute;tka <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=PartDesign_Body.svg&amp;filetimestamp=20191125185840&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Body.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Body.html" title="PartDesign Body">T&#283;leso</a></span>.</li></ol>
-<h2><span class="mw-headline" id="Properties">Properties</span></h2>
+<p><span id="Properties"></span>
+</p>
+<h2><span class="mw-headline" id="Vlastnosti">Vlastnosti</span></h2>
 <p>A <a href="../PartDesign_Body.html" title="PartDesign Body">PartDesign Body</a> (<code>PartDesign::Body</code> class) is derived from a <a href="../Part_Feature.html" title="Part Feature">Part Feature</a> (<code>Part::Feature</code> class), therefore it shares all the latter's properties.
 </p><p>In addition to the properties described in <a href="../Part_Feature.html" title="Part Feature">Part Feature</a>, the PartDesign Body has the following properties in the <a href="../Property_View.html" title="Property View">Property View</a>.
 </p>
@@ -249,13 +251,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125172734
+Cached time: 20260125172747
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.166 seconds
-Real time usage: 0.330 seconds
-Preprocessor visited node count: 1499/1000000
+CPU time usage: 0.191 seconds
+Real time usage: 0.303 seconds
+Preprocessor visited node count: 1500/1000000
 Post&#8208;expand include size: 37759/2097152 bytes
 Template argument size: 9906/2097152 bytes
 Highest expansion depth: 7/100
@@ -265,19 +267,19 @@ Unstrip post&#8208;expand size: 6403/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   91.570      1 -total
- 22.16%   20.293     14 Template:PropertyData
- 16.46%   15.069     20 Template:Variable
-  8.90%    8.153      3 Template:TitleProperty
-  7.52%    6.884      1 Template:PartDesign_Tools_navi/cs
-  6.91%    6.326      7 Template:MenuCommand
-  6.68%    6.114      6 Template:PropertyView
-  6.34%    5.809      8 Template:Caption
-  5.57%    5.104      1 Template:Userdocnavi/cs
-  4.72%    4.324     13 Template:Button
+100.00%   97.723      1 -total
+ 16.55%   16.178     14 Template:PropertyData
+ 13.79%   13.476     20 Template:Variable
+ 10.17%    9.935      2 Template:Docnav
+  9.89%    9.663      3 Template:TitleProperty
+  9.15%    8.940      1 Template:PartDesign_Tools_navi/cs
+  8.01%    7.828      6 Template:PropertyView
+  6.55%    6.404      1 Template:Userdocnavi/cs
+  5.40%    5.275      2 Template:Navigation_menu_2
+  4.98%    4.867      7 Template:Emphasis
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412621-0!canonical and timestamp 20260125172733 and revision id 1744073. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412621-0!canonical and timestamp 20260125172747 and revision id 1744075. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
