--- a/wiki/cs/PartDesign_Body.html
+++ b/wiki/cs/PartDesign_Body.html
@@ -87,7 +87,7 @@
 <p><span id="Properties"></span>
 </p>
 <h2><span class="mw-headline" id="Vlastnosti">Vlastnosti</span></h2>
-<p>A <a href="../PartDesign_Body.html" title="PartDesign Body">PartDesign Body</a> (<code>PartDesign::Body</code> class) is derived from a <a href="../Part_Feature.html" title="Part Feature">Part Feature</a> (<code>Part::Feature</code> class), therefore it shares all the latter's properties.
+<p><a href="../PartDesign_Body.html" title="PartDesign Body">PartDesign T&#283;leso</a> (t&#345;&iacute;da <code>PartDesign::Body</code>) je odvozeno od <a href="../Part_Feature.html" title="Part Feature">Part Prvku</a> (t&#345;&iacute;da <code>Part::Feature</code>), proto sd&iacute;l&iacute; v&scaron;echny vlastnosti t&eacute;to t&#345;&iacute;dy.
 </p><p>In addition to the properties described in <a href="../Part_Feature.html" title="Part Feature">Part Feature</a>, the PartDesign Body has the following properties in the <a href="../Property_View.html" title="Property View">Property View</a>.
 </p>
 <h3><span class="mw-headline" id="Data">Data</span></h3>
@@ -251,12 +251,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125172747
+Cached time: 20260125173003
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.191 seconds
-Real time usage: 0.303 seconds
+CPU time usage: 0.169 seconds
+Real time usage: 0.236 seconds
 Preprocessor visited node count: 1500/1000000
 Post&#8208;expand include size: 37759/2097152 bytes
 Template argument size: 9906/2097152 bytes
@@ -267,19 +267,19 @@ Unstrip post&#8208;expand size: 6403/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   97.723      1 -total
- 16.55%   16.178     14 Template:PropertyData
- 13.79%   13.476     20 Template:Variable
- 10.17%    9.935      2 Template:Docnav
-  9.89%    9.663      3 Template:TitleProperty
-  9.15%    8.940      1 Template:PartDesign_Tools_navi/cs
-  8.01%    7.828      6 Template:PropertyView
-  6.55%    6.404      1 Template:Userdocnavi/cs
-  5.40%    5.275      2 Template:Navigation_menu_2
-  4.98%    4.867      7 Template:Emphasis
+100.00%   51.540      1 -total
+ 15.57%    8.027     14 Template:PropertyData
+ 13.57%    6.994     20 Template:Variable
+ 12.16%    6.269      1 Template:PartDesign_Tools_navi/cs
+  9.37%    4.831      1 Template:Userdocnavi/cs
+  8.55%    4.409      2 Template:Navigation_menu_2
+  8.22%    4.239      3 Template:TitleProperty
+  6.16%    3.176      6 Template:PropertyView
+  5.85%    3.015      1 Template:GuiCommand
+  5.21%    2.683      2 Template:Code
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412621-0!canonical and timestamp 20260125172747 and revision id 1744075. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412621-0!canonical and timestamp 20260125173003 and revision id 1744077. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
