--- a/wiki/cs/PartDesign_Body.html
+++ b/wiki/cs/PartDesign_Body.html
@@ -88,7 +88,7 @@
 </p>
 <h2><span class="mw-headline" id="Vlastnosti">Vlastnosti</span></h2>
 <p><a href="../PartDesign_Body.html" title="PartDesign Body">PartDesign T&#283;leso</a> (t&#345;&iacute;da <code>PartDesign::Body</code>) je odvozeno od <a href="../Part_Feature.html" title="Part Feature">Part Prvku</a> (t&#345;&iacute;da <code>Part::Feature</code>), proto sd&iacute;l&iacute; v&scaron;echny vlastnosti t&eacute;to t&#345;&iacute;dy.
-</p><p>In addition to the properties described in <a href="../Part_Feature.html" title="Part Feature">Part Feature</a>, the PartDesign Body has the following properties in the <a href="../Property_View.html" title="Property View">Property View</a>.
+</p><p>Krom&#283; vlastnost&iacute; popsan&yacute;ch v <a href="../Part_Feature.html" title="Part Feature">Part prvku</a> m&aacute; PartDesign t&#283;leso v <a href="../Property_View.html" title="Property View">zobrazen&iacute; vlastnost&iacute;</a> n&aacute;sleduj&iacute;c&iacute; vlastnosti.
 </p>
 <h3><span class="mw-headline" id="Data">Data</span></h3>
 <p><span style="color: #fdfdfd; background-color: #909090; font-size: 112%; font-weight: bold; margin-bottom: .3em; padding: 0px 10px 1px 10px; page-break-after: avoid;">Base</span>
@@ -251,12 +251,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125173003
+Cached time: 20260125173116
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.169 seconds
-Real time usage: 0.236 seconds
+CPU time usage: 0.172 seconds
+Real time usage: 0.206 seconds
 Preprocessor visited node count: 1500/1000000
 Post&#8208;expand include size: 37759/2097152 bytes
 Template argument size: 9906/2097152 bytes
@@ -267,19 +267,19 @@ Unstrip post&#8208;expand size: 6403/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   51.540      1 -total
- 15.57%    8.027     14 Template:PropertyData
- 13.57%    6.994     20 Template:Variable
- 12.16%    6.269      1 Template:PartDesign_Tools_navi/cs
-  9.37%    4.831      1 Template:Userdocnavi/cs
-  8.55%    4.409      2 Template:Navigation_menu_2
-  8.22%    4.239      3 Template:TitleProperty
-  6.16%    3.176      6 Template:PropertyView
-  5.85%    3.015      1 Template:GuiCommand
-  5.21%    2.683      2 Template:Code
+100.00%   62.487      1 -total
+ 14.92%    9.326     14 Template:PropertyData
+ 12.66%    7.912      1 Template:PartDesign_Tools_navi/cs
+ 12.60%    7.876     20 Template:Variable
+  9.72%    6.074      2 Template:Navigation_menu_2
+  9.45%    5.904      1 Template:Userdocnavi/cs
+  6.90%    4.311      3 Template:TitleProperty
+  5.96%    3.724      6 Template:PropertyView
+  5.39%    3.367      8 Template:Caption
+  5.23%    3.266      2 Template:Code
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412621-0!canonical and timestamp 20260125173003 and revision id 1744077. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412621-0!canonical and timestamp 20260125173116 and revision id 1744079. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
