--- a/wiki/cs/PartDesign_Body.html
+++ b/wiki/cs/PartDesign_Body.html
@@ -89,8 +89,9 @@
 <h2><span class="mw-headline" id="Vlastnosti">Vlastnosti</span></h2>
 <p><a href="../PartDesign_Body.html" title="PartDesign Body">PartDesign T&#283;leso</a> (t&#345;&iacute;da <code>PartDesign::Body</code>) je odvozeno od <a href="../Part_Feature.html" title="Part Feature">Part Prvku</a> (t&#345;&iacute;da <code>Part::Feature</code>), proto sd&iacute;l&iacute; v&scaron;echny vlastnosti t&eacute;to t&#345;&iacute;dy.
 </p><p>Krom&#283; vlastnost&iacute; popsan&yacute;ch v <a href="../Part_Feature.html" title="Part Feature">Part prvku</a> m&aacute; PartDesign t&#283;leso v <a href="../Property_View.html" title="Property View">zobrazen&iacute; vlastnost&iacute;</a> n&aacute;sleduj&iacute;c&iacute; vlastnosti.
+</p><p><span id="Data"></span>
 </p>
-<h3><span class="mw-headline" id="Data">Data</span></h3>
+<h3><span id=".C3.9Adaje"></span><span class="mw-headline" id="&Uacute;daje">&Uacute;daje</span></h3>
 <p><span style="color: #fdfdfd; background-color: #909090; font-size: 112%; font-weight: bold; margin-bottom: .3em; padding: 0px 10px 1px 10px; page-break-after: avoid;">Base</span>
 </p>
 <ul><li><span style="font-size:60%; padding-right:0.8em;">&Uacute;daje</span><b>Tip</b><span style="font-size:80%;"> (<code>Link</code>)</span>: the <a href="../PartDesign_Feature.html" title="PartDesign Feature">PartDesign Feature</a> defined as "Tip", which is usually the last feature created in the Body. The Tip indicates the final shape of the Body, which is shown in the <a href="../3D_View.html" title="3D View">3D View</a> when <span style="font-size:60%; padding-right:0.8em;">Pohled</span><b>Display Mode Body</b> is set to <code>Tip</code>. See <a href="../PartDesign_Body.html#Tip" title="PartDesign Body">Tip</a> for more information.</li>
@@ -251,13 +252,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125173116
+Cached time: 20260125173400
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.172 seconds
-Real time usage: 0.206 seconds
-Preprocessor visited node count: 1500/1000000
+CPU time usage: 0.141 seconds
+Real time usage: 0.185 seconds
+Preprocessor visited node count: 1501/1000000
 Post&#8208;expand include size: 37759/2097152 bytes
 Template argument size: 9906/2097152 bytes
 Highest expansion depth: 7/100
@@ -267,19 +268,19 @@ Unstrip post&#8208;expand size: 6403/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   62.487      1 -total
- 14.92%    9.326     14 Template:PropertyData
- 12.66%    7.912      1 Template:PartDesign_Tools_navi/cs
- 12.60%    7.876     20 Template:Variable
-  9.72%    6.074      2 Template:Navigation_menu_2
-  9.45%    5.904      1 Template:Userdocnavi/cs
-  6.90%    4.311      3 Template:TitleProperty
-  5.96%    3.724      6 Template:PropertyView
-  5.39%    3.367      8 Template:Caption
-  5.23%    3.266      2 Template:Code
+100.00%   42.427      1 -total
+ 16.21%    6.876     14 Template:PropertyData
+ 13.63%    5.782     20 Template:Variable
+ 11.89%    5.044      1 Template:PartDesign_Tools_navi/cs
+  8.81%    3.738      1 Template:Userdocnavi/cs
+  7.69%    3.263      6 Template:PropertyView
+  7.34%    3.116      2 Template:Navigation_menu_2
+  6.30%    2.672      3 Template:TitleProperty
+  6.22%    2.640      1 Template:GuiCommand
+  5.15%    2.187      2 Template:Code
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412621-0!canonical and timestamp 20260125173116 and revision id 1744079. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412621-0!canonical and timestamp 20260125173400 and revision id 1744082. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
