--- a/wiki/cs/PartDesign_Body.html
+++ b/wiki/cs/PartDesign_Body.html
@@ -102,7 +102,9 @@
 <p><span style="color: #fdfdfd; background-color: #909090; font-size: 112%; font-weight: bold; margin-bottom: .3em; padding: 0px 10px 1px 10px; page-break-after: avoid;">Experimental</span>
 </p>
 <ul><li><span style="font-size:60%; padding-right:0.8em;">&Uacute;daje</span><b>Allow Compound</b><span style="font-size:80%;"> (<code>Bool</code>)</span>: allow multiple solids in the Body.</li></ul>
-<h3><span class="mw-headline" id="View">View</span></h3>
+<p><span id="View"></span>
+</p>
+<h3><span class="mw-headline" id="Pohled">Pohled</span></h3>
 <p><span style="color: #fdfdfd; background-color: #909090; font-size: 112%; font-weight: bold; margin-bottom: .3em; padding: 0px 10px 1px 10px; page-break-after: avoid;">Base</span>
 </p>
 <ul><li><span style="font-size:60%; padding-right:0.8em;">Pohled</span><b>Display Mode Body</b><span style="font-size:80%;"> (<code>Enumeration</code>)</span>: sets the display mode specifically for the Body with one of two types.
@@ -252,13 +254,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125173400
+Cached time: 20260125173423
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.141 seconds
-Real time usage: 0.185 seconds
-Preprocessor visited node count: 1501/1000000
+CPU time usage: 0.163 seconds
+Real time usage: 0.260 seconds
+Preprocessor visited node count: 1502/1000000
 Post&#8208;expand include size: 37759/2097152 bytes
 Template argument size: 9906/2097152 bytes
 Highest expansion depth: 7/100
@@ -268,19 +270,19 @@ Unstrip post&#8208;expand size: 6403/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   42.427      1 -total
- 16.21%    6.876     14 Template:PropertyData
- 13.63%    5.782     20 Template:Variable
- 11.89%    5.044      1 Template:PartDesign_Tools_navi/cs
-  8.81%    3.738      1 Template:Userdocnavi/cs
-  7.69%    3.263      6 Template:PropertyView
-  7.34%    3.116      2 Template:Navigation_menu_2
-  6.30%    2.672      3 Template:TitleProperty
-  6.22%    2.640      1 Template:GuiCommand
-  5.15%    2.187      2 Template:Code
+100.00%   62.291      1 -total
+ 13.42%    8.358     14 Template:PropertyData
+ 11.84%    7.376      1 Template:PartDesign_Tools_navi/cs
+ 11.48%    7.150     20 Template:Variable
+  7.94%    4.946      3 Template:TitleProperty
+  6.78%    4.221      1 Template:Userdocnavi/cs
+  6.74%    4.198      1 Template:GuiCommand
+  6.43%    4.008      2 Template:Code
+  5.79%    3.607      2 Template:Navigation_menu_2
+  5.32%    3.313     27 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412621-0!canonical and timestamp 20260125173400 and revision id 1744082. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412621-0!canonical and timestamp 20260125173423 and revision id 1744084. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
