--- a/wiki/de/Installing_on_Linux.html
+++ b/wiki/de/Installing_on_Linux.html
@@ -1,13 +1,13 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Installing on Linux/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Installing+on+Linux&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../id/Installing_on_Linux.html" class="mw-pt-progress mw-pt-progress--low" title="Install on Linux/id (0% translated)" lang="id" dir="ltr">Bahasa Indonesia</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../Installing_on_Linux.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Installing on Linux (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../tr/Installing_on_Linux.html" class="mw-pt-progress mw-pt-progress--low" title="Linux'te kurulum (1% translated)" lang="tr" dir="ltr">T&uuml;rk&ccedil;e</a></li>
 <li><a href="../es/Installing_on_Linux.html" class="mw-pt-progress mw-pt-progress--high" title="Instalaci&oacute;n en Linux (89% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="../fr/Installing_on_Linux.html" class="mw-pt-progress mw-pt-progress--high" title="Installation sous Linux (99% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../hr/Installing_on_Linux.html" class="mw-pt-progress mw-pt-progress--low" title="Install on Linux/hr (0% translated)" lang="hr" dir="ltr">hrvatski</a></li>
 <li><a href="../it/Installing_on_Linux.html" class="mw-pt-progress mw-pt-progress--high" title="Installare in Linux (91% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/Installing_on_Linux.html" class="mw-pt-progress mw-pt-progress--high" title="Instalacja w systemie Linux (99% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/Installing_on_Linux.html" class="mw-pt-progress mw-pt-progress--complete" title="Instalacja w systemie Linux (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt/Installing_on_Linux.html" class="mw-pt-progress mw-pt-progress--low" title="Install on Linux/pt (0% translated)" lang="pt" dir="ltr">portugu&ecirc;s</a></li>
 <li><a href="../pt-br/Installing_on_Linux.html" class="mw-pt-progress mw-pt-progress--high" title="Instalando no Linux (82% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Installing_on_Linux.html" class="mw-pt-progress mw-pt-progress--low" title="Install on Linux/ro (0% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
@@ -132,10 +132,8 @@
 </pre></div>
 <div class="mw-collapsible mw-collapsed toccolours">
 <h2><span class="mw-headline" id="OpenSUSE">OpenSUSE</span></h2>
-<div class="mw-translate-fuzzy">
-<p>FreeCAD wird typischerweise mit YAST (Abk. Yet another Setup Tool)(deutsch: Noch ein anderes Einrichtungswerkzeug) installiert, dem Einrichtungs- und Konfigurationswerkzeug f&uuml;r das Linux-Betriebssystem, oder in jedem Terminal/Konsole (root Rechte erforderlich) mit:
+<p>FreeCAD kann mit Myrlyn (das YAST im September 2025 ersetzt hat) oder in jedem Terminal/jeder Konsole (Root-Rechte erforderlich) mit folgendem Befehl installiert werden:
 </p>
-</div>
 <dl><dd><div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">zypper</span> <span class="n">install</span> <span class="n">FreeCAD</span>
 </pre></div></dd></dl>
 <p><i>Hinweis:</i> Dieses Verfahren bezieht sich nur auf die Installation offiziell freigegebener <b>stabiler</b> FreeCAD-Programmversionen, abh&auml;ngig von den installierten Verkn&uuml;pfungen zu den Programmpaket-Repositorys der Betriebssystemversion. Das openSUSE Paket kann <i>veraltet</i> sein, da das Paket hinter dem neuesten stabilen Quellcode zur&uuml;ckbleiben kann. In diesem Fall wird empfohlen, das Paket manuell aus den unten angegebenen (<i>Expand</i>) Quellcode-Repositorys zu installieren.
@@ -242,35 +240,35 @@ Ver&ouml;ffentlichungen aus den GitHub-Repositorys. Diese funktionieren in der R
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125103635
+Cached time: 20260125175200
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.088 seconds
-Real time usage: 0.114 seconds
-Preprocessor visited node count: 557/1000000
+CPU time usage: 0.097 seconds
+Real time usage: 0.173 seconds
+Preprocessor visited node count: 556/1000000
 Post&#8208;expand include size: 10007/2097152 bytes
 Template argument size: 3829/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 18/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 12827/5000000 bytes
+Unstrip post&#8208;expand size: 12836/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   26.338      1 -total
- 22.41%    5.903     18 Template:Code
- 17.64%    4.645      1 Template:Userdocnavi/de
- 13.09%    3.448      1 Template:KEY
-  9.53%    2.510      2 Template:Docnav/de
-  6.88%    1.813      3 Template:MenuCommand
-  6.46%    1.700     13 Template:Incode
-  5.17%    1.361      1 Template:Navigation_menu_2
-  4.88%    1.286      7 Template:Emphasis
-  4.68%    1.232      1 Template:Button
+100.00%   29.261      1 -total
+ 27.75%    8.121     18 Template:Code
+ 16.21%    4.744      1 Template:Userdocnavi/de
+ 10.71%    3.134      2 Template:Docnav/de
+  6.83%    1.999     13 Template:Incode
+  6.39%    1.869      7 Template:Emphasis
+  5.76%    1.686      1 Template:TOCright
+  5.68%    1.662      1 Template:KEY
+  5.45%    1.595      1 Template:Navigation_menu_2
+  4.73%    1.385      3 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:199944-0!canonical and timestamp 20260125103635 and revision id 1743668. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:199944-0!canonical and timestamp 20260125175200 and revision id 1744088. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
